name:                analyze-ghc-timings
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ömer Sinan Ağacan
maintainer:          omeragacan@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  README.markdown
cabal-version:       >=1.10

executable analyze-ghc-timings
  main-is:             analyze_timings.hs
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >=4.9 && <4.10,
    containers,
    parsec,
    wl-pprint
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
